This file documents the revision history for the Monitoring Webinterface Thruk.

1.86-3   Thu Jan 29 19:57:35 CET 2015
          - add option for default service filter
          - add host/servce connection macros
          - Bug Fixes
            - fix icon logo path in statusmap parent view
            - fixed links to other dashboards in panorama plugin
            - fix listing all backends with object config when using http backends
            - fix product prefix in cli url requests

1.86-2   Sun Jan 18 17:45:37 CET 2015
          - Reporting:
            - add option for maximum number of concurrent reports
            - start reports from cron serial instead of all at once
          - Panorama View:
            - add server actions as possible link targets
            - fixed problem when moving rotated shapes
          - Bug Fixes
            - fixed macro replacement in action menu links
            - fixed error in cluetip library by shiping a new version
            - fixed problem with shadownaemon in non-xs env
            - fixed error: Can't use string xxx as an ARRAY

1.86     Thu Jan  8 14:10:41 CET 2015
          - add custom action menu
          - livestatus performance improvements
          - updated jquery to 1.11.1
          - added new configuration setting: max_process_memory
          - add excel export permanent link (awiddersheim)
          - increased logcache int size
          - use grey performance bars on extinfo page
          - Business Process:
            - fix zoom on large business objects
          - Mobile:
            - updated jquery mobile
            - respect escape_html_tags setting from cgi.cfg
            - old themes have been replaced with 2 new ones
          - Reporting:
            - support url reports from external urls
          - Panorama View:
            - added show details/refresh links to icons
            - add 'center' position option for labels
            - changeable icon filter types